<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kevinwalker.parkit.users.UserActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_cost"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/cost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_distance" />

    <TextView
        android:id="@+id/txt_last_updated"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Last Updated: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_surface" />

    <TextView
        android:id="@+id/txt_surface"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/surface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_payment_type" />

    <TextView
        android:id="@+id/txt_payment_type"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cost" />

    <TextView
        android:id="@+id/txt_distance"
        android:layout_width="96dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:text="@string/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="268dp"
        android:text="@string/btn_park_status "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo"
        app:layout_constraintVertical_bias="0.139" />

</android.support.constraint.ConstraintLayout>
