<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rocks.kevinwalker.parkit.authentication.ForgotPassword">

    <TextView
        android:id="@+id/txt_oh_no"
        android:layout_width="273dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/forgot_password_oh_no_txt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/TextLabel"
        android:layout_width="308dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="@color/colorPrimary"
        android:theme="@style/TextLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_oh_no"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimary">


        <EditText
            android:id="@+id/et_registration_email"
            android:layout_width="281dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:fontFamily="@font/open_sans"
            android:hint="@string/et_forgot_password_enter_email"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.351" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send_password"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="132dp"
        android:background="@drawable/send_password_reminder_button"
        android:fontFamily="@font/open_sans"
        android:text="@string/forgot_password_button_send_reminder"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/forgot_password_animation"
        android:layout_width="333dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="forgot_password_animation.json"
        app:lottie_loop="false" />

</android.support.constraint.ConstraintLayout>